# You must change these to your own details.
[package]
name = "nn_001"
description = "template repository to run nannou app both in native app and web browser."
version = "0.0.1"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"
resolver = "2" 

[[bin]]
name = "nn_001_compat"
path = "src/main.rs"

[lib]
name = "nn_001_web_test"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
async-std = { version = "1.10.0", features = ["unstable"] }
nannou = { version="0.18.1", path="../../nannou/nannou" , features =["wasm-experimental"]}
roughr = "0.6.0"
points_on_curve = "0.5.0"
nannou_egui = {version= "0.5.0", path = "../../nannou/nannou_egui"}
palette = "0.7.3"
rand = "0.8.5"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# # These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.1.27"
js-sys = "0.3.22"
